# piscem

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cargo.toml.cs_orig  README.md  build.rs  bump_and_publish.sh  clean_build.sh  dist-workspace.toml  release.sh  software.yml
.cargo/: config-portable.toml  config.local.example.toml  config.toml
.github/: build-setup.yml
.github/workflows/: cmake-setup.yml  release.yaml  release.yml
scripts/: git-archive-all.sh
src/: main.rs  piscem_commands.rs
