[package]
name = "piscem"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.22", features = ["cargo", "derive", "env", "wrap_help"] }
env_logger = "0.9.1"
log = "0.4.17"

[profile.release]
lto = "thin"
opt-level = 3
