[package]
name = "piscem"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.26", features = ["cargo", "derive", "env", "wrap_help"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = true, features = ["env-filter"] }

[profile.release]
lto = "thin"
opt-level = 3
